chore: Upgrade the Panama stuff from jep389 (JDK16) to jep412(JDK17)
See https://openjdk.java.net/jeps/412